--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@
 
 
 body {
-    font-family: "Inter", sans-serif;
+    font-family: sans-serif;
 }
 
 @layer utilities {
@@ -39,18 +39,7 @@ body {
     }
 
     .markdown {
-        @apply max-w-full prose
-        dark:prose-p:text-light-700
-        dark:prose-ol:text-light-700
-        dark:prose-ul:text-light-500
-        dark:prose-strong:text-white
-        dark:prose-headings:text-white
-        prose-headings:text-dark-400
-        prose-h1:text-dark-300
-        prose-h2:text-dark-300
-        prose-p:text-dark-500
-        prose-ul:text-dark-500
-        prose-ol:text-dark-500;
+        @apply max-w-full prose dark:prose-p:text-light-700 dark:prose-ol:text-light-700 dark:prose-ul:text-light-500 dark:prose-strong:text-white dark:prose-headings:text-white prose-headings:text-dark-400 prose-h1:text-dark-300 prose-h2:text-dark-300 prose-p:text-dark-500 prose-ul:text-dark-500 prose-ol:text-dark-500;
     }
 
     .primary-gradient {
@@ -58,26 +47,18 @@ body {
     }
 
     .dark-gradient {
-        background: linear-gradient(
-                232deg,
+        background: linear-gradient(232deg,
                 rgba(23, 28, 35, 0.41) 0%,
-                rgba(19, 22, 28, 0.7) 100%
-        );
+                rgba(19, 22, 28, 0.7) 100%);
     }
 
     .tab {
-        @apply min-h-full dark:bg-dark-400
-        bg-light-800 text-light-500 dark:data-
-        [state=active]:bg-dark-300 data-
-        [state=active]:bg-primary-100 data-
-        [state=active]:text-primary-500 !important;
+        @apply min-h-full dark:bg-dark-400 bg-light-800 text-light-500 dark:data- [state=active]:bg-dark-300 data- [state=active]:bg-primary-100 data- [state=active]:text-primary-500 !important;
     }
 }
 
 .no-focus {
-    @apply focus-visible:ring-0
-    focus-visible:ring-transparent
-    focus-visible:ring-offset-0 !important;
+    @apply focus-visible:ring-0 focus-visible:ring-transparent focus-visible:ring-offset-0 !important;
 }
 
 .active-theme {
@@ -85,11 +66,9 @@ body {
 }
 
 .light-gradient {
-    background: linear-gradient(
-            132deg,
+    background: linear-gradient(132deg,
             rgba(247, 249, 255, 0.5) 0%,
-            rgba(229, 237, 255, 0.25) 100%
-    );
+            rgba(229, 237, 255, 0.25) 100%);
 }
 
 .primary-text-gradient {
@@ -176,6 +155,8 @@ code {
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .no-scrollbar {
-    -ms-overflow-style: none; /* IE and Edge */
-    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
 }
