--- a/app/globals.css
+++ b/app/globals.css
@@ -43,7 +43,7 @@ body {
     }
 
     .primary-gradient {
-        background: linear-gradient(129deg, #ff7000 0%, #e2995f 100%);
+        background: linear-gradient(129deg, #ff0000 0%, #e25f5f 100%);
     }
 
     .dark-gradient {
@@ -62,7 +62,7 @@ body {
 }
 
 .active-theme {
-    filter: invert(53%) sepia(98%) saturate(3332%) hue-rotate(0deg) brightness(104%) contrast(106%) !important;
+    filter: invert(53%) sepia(98%) saturate(5000%) hue-rotate(-20deg) brightness(90%) contrast(100%) !important;
 }
 
 .light-gradient {
@@ -72,7 +72,7 @@ body {
 }
 
 .primary-text-gradient {
-    background: linear-gradient(129deg, #ff7000 0%, #e2995f 100%);
+    background: linear-gradient(129deg, #ff0000 0%, #e25f5f 100%);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -120,7 +120,7 @@ code {
     -webkit-hyphens: auto;
     hyphens: auto;
     padding: 2px;
-    color: #ff7000 !important;
+    color: #ff0000 !important;
 }
 
 .markdown pre {
@@ -139,7 +139,7 @@ code {
 
 /* Clerk */
 .cl-internal-b3fm6y {
-    background: linear-gradient(129deg, #ff7000 0%, #e2995f 100%) !important;
+    background: linear-gradient(129deg, #ff0000 0%, #e25f5f 100%) !important;
 }
 
 .hash-span {
